--- a/Step 1/app/design/adminhtml/default/default/template/pdp/baseurl.phtml
+++ b/Step 1/app/design/adminhtml/default/default/template/pdp/baseurl.phtml
@@ -1,1 +1,1 @@
-<input type="hidden" value="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_LINK)?>" id="mst_base_url" />
+<input type="hidden" value="<?php echo Mage::helper("pdp")->getPdpBaseUrl(); ?>" id="mst_base_url" />
