--- a/Step 1/app/design/frontend/base/default/template/pdp/design/share_buttons.phtml
+++ b/Step 1/app/design/frontend/base/default/template/pdp/design/share_buttons.phtml
@@ -2,9 +2,9 @@
 	<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 		<a class="addthis_button_facebook"></a>
 		<a class="addthis_button_twitter"></a>
-		<a class="addthis_button_pinterest_share"></a>
+		<!-- <a class="addthis_button_pinterest_share"></a> -->
 		<a class="addthis_button_google_plusone_share"></a>
-		<!-- <a class="addthis_button_email"></a>  -->
+		<a class="addthis_button_email"></a>
 	</div>
 </div>
 <input type="hidden" name="save_design_url" id="save_design_url" value="<?php echo $this->getBaseUrl() . "pdp/view/saveBeforeShare" ?>"/>
