--- a/Step 1/app/design/frontend/base/default/template/pdp/design.phtml
+++ b/Step 1/app/design/frontend/base/default/template/pdp/design.phtml
@@ -7,37 +7,43 @@
     $product = Mage::getModel('catalog/product')->load($productId);
     $title = $product->getName();
 	$viewMode = $this->getViewMode();
-	$jsonString = "";
-	if ($viewMode == "backend") {
-		$jsonString = $this->_helper->getAdminTemplates($productId);
-	} else {
-		if($this->getShareId() != null) {
-			$jsonString = $this->_helper->getShareJsonString($this->_shareId);
-		} else {
+	$jsonString = $this->getJsonContentFromParam();
+	if ($jsonString == "") {
+		if ($viewMode == "backend") {
 			$jsonString = $this->_helper->getAdminTemplates($productId);
-		}
+		} else {
+			if($this->getShareId() != null) {
+				$jsonString = $this->_helper->getShareJsonString($this->_shareId);
+			} else {
+				$jsonString = $this->_helper->getAdminTemplates($productId);
+			}
+		}	
 	}
 ?>
-<?php if ($viewMode == "backend") : ?>
-	<?php echo $this->getLayout()->createBlock('pdp/pdp')->setTemplate('pdp/design/admin_extra_html.phtml')->toHtml() ?>
-<?php endif; ?>
-
+<link rel="stylesheet" type="text/css" href="<?php echo $this->getJSUrl('pdp/css/styles.css') ?>"/>
+<link rel="stylesheet" type="text/css" href="<?php echo $this->getJSUrl('pdp/css/jquery.ui.core.css') ?>"/>
+<link rel="stylesheet" type="text/css" href="<?php echo $this->getJSUrl('pdp/css/jquery.mCustomScrollbar.css') ?>"/>
+<link rel="stylesheet" type="text/css" href="<?php echo $this->getJSUrl('pdp/css/colorbox.css') ?>"/>
+<link rel="stylesheet" type="text/css" href="<?php echo $this->getJSUrl('pdp/css/owl.carousel.css') ?>"/>
+<link rel="stylesheet" type="text/css" href="<?php echo $this->getJSUrl('pdp/css/pi-awesome.css') ?>"/>
+<link rel="stylesheet" type="text/css" href="<?php echo $this->getJSUrl('pdp/css/jquery.nouislider.css') ?>"/>
+<link rel="stylesheet" type="text/css" href="<?php echo $this->getJSUrl('pdp/css/farbtastic.css') ?>"/>
+<link rel="stylesheet" type="text/css" href="<?php echo $this->getJSUrl('pdp/css/stickytooltip.css') ?>"/>
+<link rel="stylesheet" type="text/css" href="<?php echo $this->getJSUrl('pdp/css/accordion.css') ?>"/>
+<link rel="stylesheet" type="text/css" href="<?php echo $this->getJSUrl('pdp/css/skin-1.css') ?>"/>
+<link rel="stylesheet" type="text/css" href="<?php echo $this->getJSUrl('pdp/css/colour-icon.css') ?>"/>
+<div class='design-btn' style="display: none">
+	<?php echo $this->getLayout()->createBlock('pdp/designbutton')->setTemplate('pdp/product/design_button.phtml')->toHtml() ?>
+</div>
 <input name="pdp_design_string" type="hidden" value="<?php echo htmlentities($jsonString) ?>"/>
 <div class="wrapper_pdp">
     <div class="wrapper_pdp_2">
-    	<?php  if ($viewMode == "product") : ?>
-        <span class="pdp2_close"></span>
-        <span class="pdp2_expand"></span>
-        <?php endif; ?>
-    	<?php if ($viewMode != "backend") { ?>
-        <h2 class="product-title"><?php echo $title ?></h2>
-    	<?php } ?>
+        <!-- <h2 class="product-title"><?php echo $title ?></h2>  -->
         <div class="wrap_pdp_design">
             <div id="design_control">
                 <div class="control_tab">
                     <div class="control_tab">
                     <div class="control_tab_wrap">
-                        
                         <div class="add_text">
                             <a class="hidesm">+ <?php echo $this->__('Add Text') ?></a>
                             <a class="showsm">+ <i class="pi pi-text-width"></i></a>
@@ -46,19 +52,14 @@
                             <a class="hidesm">+ <?php echo $this->__('Add Photos/Clipart'); ?></a>
                             <a class="showsm">+ <i class="pi pi-image"></i></a>
                         </div>
-						
-						<?php  if ($viewMode == "product") : ?>
 						<div id="pdp_share"><a title="Social Sharing" ><i class="pi pi-share-alt-square"></i> <?php echo $this->__('Share')?></a></div>
 						<div class="pdp_share_buttons" style="display: none">
 							<?php  echo $this->getChildHtml('share_buttons'); ?>
 						</div>
-						<?php  endif; ?>
-						<?php  if ($viewMode == "product") : ?>
                         <div id="pdp2_zoom"><a  title="<?php echo $this->__('Preview'); ?>"><i class="pi pi-eye"></i> <?php echo $this->__('Preview'); ?></a></div>
-						<?php endif; ?>
 						<?php 
 						$saveLabel = $this->__('Save'); 
-						if ($viewMode == "product") {
+						if (!$this->isAdminUser()) {
 							$saveLabel = $this->__('Done');
 						}
 						?>
@@ -82,7 +83,6 @@
     			<?php endif; ?>
             </div>
             <div class="product-img-box">
-				
 				<?php
 				/*===Multi Sides Option if product have more than 2 sides===*/
 				echo $this->getChildHtml('pdp_sideview') ?>
@@ -95,7 +95,6 @@
             </div>
 			<?php /* ===TOOLs Panel == */ ?>
             <?php echo $this->getChildHtml('pdp_toolbox') ?>
-			
         </div>
 		<?php /* ===NEVER CHANGE ID/CLASS == */ ?>
         <div id="img_sessiton" class="nodisplay"></div>
@@ -114,8 +113,19 @@
 <img alt="" id="temp_final_image" src="" style="display: none;"/>
 <input id="temp_action" type="hidden" value=""/>
 <div class="temp_container" style="display: none;"></div>
-<?php if ($viewMode != "backend") : ?>
-	<?php echo $this->getLayout()->createBlock('core/template')->setTemplate('pdp/design/load_js_ater.phtml')->toHtml() ?>
-<?php else : ?>
-	<?php echo $this->getLayout()->createBlock('pdp/pdp')->setTemplate('pdp/design/admin_extra_js.phtml')->toHtml() ?>
-<?php endif; ?>
+<!-- Preview / Download Popup -->
+<div id="pdp_design_popup"></div>
+<div class='pdp_actions_backend'>
+	<?php if ($this->isAdminUser()) : ?>
+	<input type="hidden" id="is_backend" value="yes" />
+	<script src="<?php echo $this->getJSUrl('pdp/js/jquery.min.js') ?>"></script>
+	<script src="<?php echo $this->getJSUrl('pdp/js/farbtastic.js') ?>"></script>
+	<script src="<?php echo $this->getJSUrl('pdp/js/jquery.nouislider.js') ?>"></script>
+	<script src="<?php echo $this->getJSUrl('pdp/js/owl.carousel.js') ?>"></script>
+	<script src="<?php echo $this->getJSUrl('pdp/js/fabric.js') ?>"></script>
+	<script src="<?php echo $this->getJSUrl('pdp/js/jquery.mCustomScrollbar.concat.min.js') ?>"></script>
+	<?php endif; ?>
+</div>
+<script src="<?php echo $this->getJSUrl('pdp/js/pdpsetting.js') ?>"></script>
+<script src="<?php echo $this->getJSUrl('pdp/js/design.js') ?>"></script>
+<script src="<?php echo $this->getJSUrl('pdp/js/js.js') ?>"></script> 
