Auto open iframe if param action=design

--- a/Step 1/app/design/frontend/base/default/template/pdp/product/iframe.phtml
+++ b/Step 1/app/design/frontend/base/default/template/pdp/product/iframe.phtml
@@ -164,7 +164,13 @@ if (isset($request['json']) && $request['json'] != "") {
 					$(this).addClass("loaded");
 					LoadDesign.init();
 				});
-			}()
+			}(),
+			autoClickCustomBtn : function() {
+				if($("#pdp_design_action", mainWindow).val() == "design") {
+					$("#get_design_content").click();
+				}
+			}
  		}
+ 		LoadDesign.autoClickCustomBtn();
 	});
 </script>
